--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
+    "express-validator": "^7.0.1",
     "pg": "^8.8.0"
   },
   "devDependencies": {
