--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
+    "express-messages": "^1.0.1",
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "pg": "^8.8.0"
